2002-08-05  Dominik Vogt  <dominik.vogt@gmx.de>

	* configure.in:
	enable error message when png or xpm test compilation fails

	* fvwm/style.h:
	* fvwm/window_flags.h:
	* fvwm/ewmh.c (ewmh_HandleDesktop):
	* fvwm/style.c (parse_and_set_window_style):
	(check_window_style_change):
	* fvwm/events.c (HandleButtonPress):
	(HandleVisibilityNotify):
	began GFPR migration of *raises* focus policy flags

	* fvwm/focus.c (focus_is_focusd):
	new function

	* libs/Bindings.c (AddBinding):
	fixed handling of "unknown" modifiers in key bindings

	* fvwm/focus.c (focus_grab_buttons):
	(focus_query_grab_buttons):
	moved focus policy code into separate function

2002-08-02  Mikhael Goikhman  <migo@homemail.com>

	* Makefile.am:
	DESTDIR fix

2002-08-01  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/style.c (parse_and_set_window_style):
	* fvwm/focus.c (focus_query_grab_focus):
	* fvwm/events.c (HandleMapNotify):
	(HandlePropertyNotify):
	* fvwm/focus_policy.c (fpol_init_default_fp):
	* libs/defaults.h:
	new styles OverrideGrabFocus and AllowGrabFocus
	cleaned up focus grabbing code and moved to focus.c

2002-07-30  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/focus.c (CMD_WarpToWindow):
	fixed negative arguments for unmanaged windows

	* fvwm/conditional.c (CMD_Direction):
	use PeekToken instead of GetNextToken
	cleaned up
	new direction "center"

2002-07-29  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/events.c (addkbsubinstoarray):
	disabled experimental pointer warping code

	* fvwm/menus.c:
	removed menu crash debug code

2002-07-26  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/menus.c:
	added tons of crash debug code

	* fvwm/add_window.c:
	made a lot of internal functions static

	* fvwm/add_window.c (setup_button_windows):
	(destroy_title_window):
	(destroy_button_windows):
	(destroy_resize_handle_windows):
	(destroy_auxiliary_windows):
	(destroy_icon):
	(destroy_window):
	* fvwm/icons.c (CreateIconWindow):
	safety patches w/ XDeleteContext

	* fvwm/menus.c (DestroyMenu):