@@ -1,5 +1,10 @@
 2002-08-05  Dominik Vogt  <dominik.vogt@gmx.de>
 
+	* libs/defaults.h:
+	* fvwm/focus_policy.c:
+	* fvwm/focus_policy.h:
+	prepared some future focus policy flags
+
 	* configure.in:
 	enable error message when png or xpm test compilation fails
 
